--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@google/genai": "^1.20.0",
-    "recharts": "^3.2.1"
+    "recharts": "2.12.7",
+    "leaflet": "1.9.4",
+    "react-leaflet": "4.2.1",
+    "leaflet.markercluster": "1.5.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
