feat: Integrate Firebase authentication and add new views
Adds Firebase authentication to the application, enabling user login and management.
Introduces new views for Challenges and Marketplace, and a Login component.
Updates type definitions to support users, watchlist items with priorities, and challenges.
Refactors geminiService to handle challenge generation and improve JSON parsing.
Implements debouncing for search queries to optimize API calls.
Enhances the Dashboard component to display watchlist, challenges, and solutions, and to integrate with the new features.
Updates dependencies to include `firebase`.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "recharts": "2.12.7",
     "leaflet": "1.9.4",
     "react-leaflet": "4.2.1",
-    "leaflet.markercluster": "1.5.3"
+    "leaflet.markercluster": "1.5.3",
+    "firebase": "^12.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
